--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-monitor-de-avance-de-certificación",
+  "name": "reporte-de-avance-google-it-support",
   "private": true,
   "version": "0.0.0",
   "type": "module",
